--- a/restaurant-reservation/src/main/resources/application.yaml
+++ b/restaurant-reservation/src/main/resources/application.yaml
@@ -1,3 +1,16 @@
 spring:
-  application:
-    name: restaurant-reservation
+  datasource:
+    url: jdbc:postgresql://localhost:5432/restaurant_db
+    username: restaurant_user
+    password: restaurant_pass
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+server:
+  port: 8081
